# chess

./: .gitignore  README.md  pyproject.toml
.github/: COPILOT_GIT_COMMIT.md
books/: README.md
chess_engine/: board.py  main.py  rich_black_white_progress.py
